--- a/src/scss/views/view.scss
+++ b/src/scss/views/view.scss
@@ -4,6 +4,7 @@
     position: absolute;
     top: 2rem;
     left: 0;
+    width: 80%;
 }
 
 .anim{
